core.settings is now part of core.sdk

--- a/modules/core/sdk/unit/settings/CMakeLists.txt
+++ b/modules/core/sdk/unit/settings/CMakeLists.txt
@@ -23,4 +23,4 @@ SET( SOURCES
    )
 
 include(CheckCXXCompilerFlag)
-nt2_module_add_tests(core.settings.unit ${SOURCES})
+nt2_module_add_tests(core.sdk.settings.unit ${SOURCES})
