--- a/modules/core/sdk/unit/CMakeLists.txt
+++ b/modules/core/sdk/unit/CMakeLists.txt
@@ -12,3 +12,4 @@ nt2_module_use_modules(test.unit sdk.meta sdk.error)
 ADD_SUBDIRECTORY(dsl)
 ADD_SUBDIRECTORY(meta)
 ADD_SUBDIRECTORY(memory)
+ADD_SUBDIRECTORY(settings)
